menambahkan data 1 mahasiswa

--- a/mahasiswa.html
+++ b/mahasiswa.html
@@ -12,6 +12,7 @@
     <ul>
       <li>Diki Suendi : 41517310017</li>
       <li>Asep Sunandar : 112312333</li>
+      <li>Rizki : 123123123</li>
     </ul>
   </body>
 </html>
