--- a/mahasiswa.html
+++ b/mahasiswa.html
@@ -7,12 +7,14 @@
     <title>Coba Git</title>
   </head>
   <body>
-    <h3>Data Mahasiswa</h3>
+    <h1>Data Mahasiswa</h1>
 
     <ul>
       <li>Diki Suendi : 41517310017</li>
       <li>Asep Sunandar : 112312333</li>
       <li>Rizki : 123123123</li>
     </ul>
+
+    <p>contoh paragraf</p>
   </body>
 </html>
