mengubah file mahasiswa.html

--- a/mahasiswa.html
+++ b/mahasiswa.html
@@ -7,12 +7,13 @@
     <title>Coba Git</title>
   </head>
   <body>
-    <h3>Data Mahasiswa</h3>
+    <h4>Data Mahasiswa</h4>
 
     <ul>
       <li>Diki Suendi : 41517310017</li>
       <li>Asep Sunandar : 112312333</li>
-      <li>Rizki : 123123123</li>
     </ul>
+
+    <p>coba paragraph</p>
   </body>
 </html>
